--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "/images/profile.JPG"
   name             : "Olivia Xiong"
   pronouns         : # example: "she/her"  
   bio              : "Economics PhD Student at Harvard/HBS"
